gatekeeper/constraints/constraints-limit-replica.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sReplicaLimit
metadata:
  name: deployment-replica-limit
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
  parameters:
    maxReplicas: 5
